--- a/src/componentes/CampoFormulario/campoFormulario.css
+++ b/src/componentes/CampoFormulario/campoFormulario.css
@@ -70,3 +70,11 @@ input:focus {
     border: none;
     cursor: pointer;
 }
+
+.formulario {
+    background-color: var(--azul-nivel-3);
+    width: 500px;
+    padding: 20px 20px 40px 20px;
+    box-shadow: 5px 5px 5px #000914;
+    border-radius: 16px;
+}
